--- a/index.html
+++ b/index.html
@@ -5,11 +5,90 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>event</title>
+    <link rel="stylesheet" href="assets/lib/layui/css/layui.css">
+    <link rel="stylesheet" href="assets/css/index.css">
+    <link rel="stylesheet" href="assets/fonts/iconfont.css">
+    <title>后台主页</title>
 </head>
 
 <body>
-    <h1>主页</h1>
+    <div class="layui-layout layui-layout-admin">
+        <div class="layui-header">
+            <div class="layui-logo layui-hide-xs layui-bg-black">news管理系统</div>
+            <!-- 头部区域（可配合layui 已有的水平导航） -->
+
+            <ul class="layui-nav layui-layout-right">
+                <li class="layui-nav-item layui-hide layui-show-md-inline-block">
+                    <a href="javascript:;" class="userinfo">
+                        <!--  -->
+                        <img src="" class="layui-nav-img">
+                        <span class="text-avatar">A</span> 个人中心
+                    </a>
+                    <dl class="layui-nav-child">
+                        <dd><a href="">基本资料</a></dd>
+                        <dd><a href="">更换头像</a></dd>
+                        <dd><a href="">重置密码</a></dd>
+                    </dl>
+                </li>
+                <!-- <li class="layui-nav-item" lay-header-event="menuRight" lay-unselect>
+                    <a href="javascript:;">
+                        <i class="layui-icon layui-icon-more-vertical"></i>
+                    </a>
+                </li> -->
+                <li class="layui-nav-item downlogin" lay-header-event="menuRight" lay-unselect>
+                    <a href="javascript:;" class="log-off">
+                        <span class="iconfont icon-tuichu"></span> 退出
+                    </a>
+                </li>
+            </ul>
+        </div>
+
+        <div class="layui-side layui-bg-black">
+            <div class="layui-side-scroll">
+                <span id="welcome">欢迎：您好</span>
+                <!-- 左侧导航区域（可配合layui已有的垂直导航） -->
+                <ul class="layui-nav layui-nav-tree " lay-shrink="all" lay-filter="test">
+                    <li class="layui-nav-item layui-this">
+                        <!-- target href使用 -->
+                        <a href="../event/home/dashboard.html" target="fm">
+                            <i class="layui-icon layui-icon-home" style="font-size:18px; color: #fff;"></i> 首页</a>
+                    </li>
+                    <li class="layui-nav-item">
+                        <a class="" href="javascript:;"> <i class="layui-icon layui-icon-file-b" style="font-size:18px; color: #fff;"></i> 文章管理</a>
+                        <dl class="layui-nav-child">
+                            <dd><a href="javascript:;">文章类别</a></dd>
+                            <dd><a href="javascript:;">文章列表</a></dd>
+                            <dd><a href="javascript:;">发表文章</a></dd>
+                        </dl>
+                    </li>
+                    <li class="layui-nav-item">
+                        <a href="javascript:;"><i class="layui-icon layui-icon-username" style="font-size:18px; color: #fff;"></i> 个人中心</a>
+                        <dl class="layui-nav-child">
+                            <dd><a href="javascript:;">基本资料</a></dd>
+                            <dd><a href="javascript:;">更换头像</a></dd>
+                            <dd><a href="javascript:;">重置密码</a></dd>
+                        </dl>
+                    </li>
+                </ul>
+            </div>
+        </div>
+
+        <div class="layui-body">
+            <!-- 内容主体区域//////// -->
+            <iframe name="fm" src="../event/home/dashboard.html" frameborder="0"></iframe>
+        </div>
+
+        <div class="layui-footer">
+            <!-- 底部固定区域 -->
+            www.fengjing.com
+        </div>
+    </div>
+    <!-- 导入layui.js -->
+    <script src="assets/lib/layui/layui.all.js"></script>
+    <script src="assets/lib/jquery.js"></script>
+    <!--baseAPI在 index.js之前 -->
+    <script src="assets/js/baseAPI.js"></script>
+    <script src="assets/js/index.js"></script>
 </body>
 
 </html>
