--- a/login.html
+++ b/login.html
@@ -68,10 +68,10 @@
             </form>
         </div>
     </div>
-    <script src="assets/lib/layui/layui.all.js"></script>
-    <script src="assets/lib/jquery.js"></script>
-    <script src="assets/js/baseAPI.js"></script>
-    <script src="assets/js/login.js"></script>
+    <script src="./assets/lib/layui/layui.all.js"></script>
+    <script src="./assets/lib/jquery.js"></script>
+    <script src="./assets/js/baseAPI.js"></script>
+    <script src="./assets/js/login.js"></script>
 </body>
 
 </html>
