--- a/user/user_avatar.htm
+++ b/user/user_avatar.htm
@@ -21,7 +21,7 @@
                 <!-- 图片裁剪区域 -->
                 <div class="cropper-box">
                     <!-- 这个 img 标签很重要，将来会把它初始化为裁剪区域 -->
-                    <img id="image" src="../assets/images/news.png" />
+                    <img id="image" src="../assets/images/pic.png" />
                 </div>
                 <!-- 图片的预览区域 -->
                 <div class="preview-box">
